clean up mobile header layout and re-enable browser zoom

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/stellar-icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes, viewport-fit=cover"
+    />
     <meta name="description" content="Link2Pay - Decentralized Invoice & Payment Platform on Stellar Network" />
-    <title>Link2Pay — Invoice & Pay on Stellar</title>
+    <title>Link2Pay - Invoice & Pay on Stellar</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
@@ -15,3 +18,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
